--- a/src/sass/pages/_projects.scss
+++ b/src/sass/pages/_projects.scss
@@ -4,7 +4,6 @@
 	padding: 1em;
 	overflow: hidden;
 	&__container {
-		// border: 1px solid red;
 		width: 100%;
 		height: 100%;
 
@@ -17,10 +16,9 @@
 		grid-auto-columns: 100%;
 		grid-auto-flow: column;
 		gap: 1em;
-		padding: 0.5em;
-		.project {
-			// border: 1px solid yellowgreen;
+		padding: 0rem 0.5em;
 
+		.project {
 			display: flex;
 			flex-direction: column;
 			place-content: center;
@@ -38,12 +36,11 @@
 				gap: 0.1em;
 			}
 
-			gap: 1em;
+			gap: 0.5em;
 
 			.title {
 				grid-area: title;
 			}
-
 
 			&__screenshot {
 				max-width: 60%;
@@ -72,7 +69,6 @@
 		}
 	}
 	nav {
-		background-color: transparent;
 		display: flex;
 		gap: 1em;
 		max-width: 100%;
